# SimpleGram

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
simplegram/: __init__.py
simplegram/template/: config.py
simplegram/template/commands/: backup.py  restore.py  search.py  start.py
simplegram/utils/: system.py
