[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleGram"
version = "0.1.0"
authors = [
    {name = "TechDev", email = "alejandro.techdev@gmail.com"},
]
description = "A simple Python library that prints 'Hola Mundo'"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "telethon"
]

[project.urls]
Homepage = "https://github.com/ale-techdev/SimpleGram"
Repository = "https://github.com/ale-techdev/SimpleGram"

[project.scripts]
simplegram = "simplegram.__init__:main"